<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddMedication">

    <ScrollView
        android:id="@+id/scrollAdd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="-88dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/vm_medicationExpDateTitle"
                android:layout_width="218dp"
                android:layout_height="44dp"
                android:layout_marginStart="59dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="324dp"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:hint="Expiration Date"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vm_medicationQtyTitle" />

            <TextView
                android:id="@+id/localMedicationTitle"
                android:layout_width="261dp"
                android:layout_height="46dp"
                android:layout_marginStart="184dp"
                android:layout_marginTop="59dp"
                android:layout_marginEnd="184dp"
                android:layout_marginBottom="60dp"
                android:text="Add Medication"
                android:textSize="36sp"
                app:layout_constraintBottom_toTopOf="@+id/vm_medicationNameTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/saveMedicationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:layout_marginTop="350dp"
                android:layout_marginEnd="250dp"
                android:text="Save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <AutoCompleteTextView
                android:id="@+id/vm_medicationNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="59dp"
                android:layout_marginEnd="324dp"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:hint="Medication Name"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/vm_medicationQtyTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/vm_medicationQtyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="59dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="324dp"
                android:ems="10"
                android:hint="Quantity"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vm_medicationNameTitle" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="217dp"
                android:layout_height="40dp"
                android:layout_marginStart="59dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="325dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vm_medicationExpDateTitle">

                <RadioButton
                    android:id="@+id/pillButton"
                    android:layout_width="69dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Pill" />

                <RadioButton
                    android:id="@+id/liquidButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Liquid" />

            </RadioGroup>

            <CheckBox
                android:id="@+id/mondayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="59dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="20dp"
                android:text="Monday"
                app:layout_constraintBottom_toTopOf="@+id/tuesdayCheck"
                app:layout_constraintEnd_toStartOf="@+id/fridayCheck"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daysTakingText" />

            <TextView
                android:id="@+id/daysTakingText"
                android:layout_width="218dp"
                android:layout_height="31dp"
                android:layout_marginStart="58dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="325dp"
                android:text="Days Taking"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <CheckBox
                android:id="@+id/tuesdayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="59dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="43dp"
                android:text="Tuesday"
                app:layout_constraintEnd_toStartOf="@+id/saturdayCheck"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mondayCheck" />

            <CheckBox
                android:id="@+id/wednesdayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="59dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="21dp"
                android:text="Wednesday"
                app:layout_constraintEnd_toStartOf="@+id/sundayCheck"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tuesdayCheck" />

            <CheckBox
                android:id="@+id/fridayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="341dp"
                android:text="Friday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daysTakingText" />

            <CheckBox
                android:id="@+id/saturdayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="324dp"
                android:text="Saturday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fridayCheck" />

            <CheckBox
                android:id="@+id/sundayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="337dp"
                android:text="Sunday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saturdayCheck" />

            <CheckBox
                android:id="@+id/thursdayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="59dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="450dp"
                android:text="Thursday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wednesdayCheck" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="287dp"
                android:src="@android:drawable/star_on"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/localMedicationTitle" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginEnd="287dp"
                android:src="@android:drawable/star_on"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginEnd="287dp"
                android:src="@android:drawable/star_on"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginEnd="287dp"
                android:src="@android:drawable/star_on"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView1" />

            <Button
                android:id="@+id/addImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/daysTakingText"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <ImageView
                android:id="@+id/medicationImage"
                android:layout_width="197dp"
                android:layout_height="217dp"
                app:layout_constraintBottom_toTopOf="@+id/addImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vm_medicationQtyTitle"
                app:layout_constraintTop_toBottomOf="@+id/localMedicationTitle"
                tools:src="@tools:sample/avatars" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>