<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LocalMedication">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="270dp"
                android:layout_height="39dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="Active Medication"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/localMedicationTityle" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="160dp"
                android:text="Type"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="@+id/recyclerviewInactive" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="Quantity"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
                app:layout_constraintEnd_toStartOf="@+id/textView8"
                app:layout_constraintStart_toEndOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="Medication Name"
                app:layout_constraintStart_toStartOf="@+id/recyclerviewInactive"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/localMedicationTityle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:text="Local Medication"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.478"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="570dp"
                android:layout_height="470dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toTopOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:listitem="@layout/recyclerview_item" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewInactive"
                android:layout_width="570dp"
                android:layout_height="134dp"

                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:listitem="@layout/recyclerview_item" />

            <ImageButton
                android:id="@+id/addMedicationButton"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/add_med_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/homeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="Home"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="Medication Name"
                app:layout_constraintStart_toStartOf="@+id/recyclerview"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="Quantity"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView"
                app:layout_constraintEnd_toStartOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="160dp"
                android:text="Type"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="@+id/recyclerview" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="270dp"
                android:layout_height="39dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="Inactive Medication"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>